--- a/drive/quickstart/index.html
+++ b/drive/quickstart/index.html
@@ -31,8 +31,8 @@ limitations under the License.
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-      var CLIENT_ID = '<YOUR_CLIENT_ID>';
-      var API_KEY = '<YOUR_API_KEY>';
+      var CLIENT_ID = '751915148030-1cbdris7cl7ko92tm9762lfcr075chdj.apps.googleusercontent.com';
+      var API_KEY = 'AIzaSyCX9BKWdhi7aPxE78cuGzQBEs7IHhe2dxw';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"];
